version 1.0.2
- Improved 'print' method of all objects inheriting from 'confrontation' (#129)
- Fix: add_indicators() would fail or not add results properly in some
  cases. (Thanks to Jos de Waard for reporting #128).

version 1.0.1
- Fixed URL issues caught by CRAN but not by R CMD check --as-cran.


version 1.0.0
- Added The Data Validation Cookbook as vignette. See also
  <https://data-cleaning.github.io/validate>
- Improved visualisation of validation output using 'plot'. The 'barplot'
  method for 'confrontation' objects is now deprecated and will be removed
  eventually.
- New functions 'violating', 'satisfying', 'lacking' to select records 
  based on 'validator' objects or the outcome of validations ('validation' 
  objects).
- New function 'hierarchy' checks aggregations against hierarchical code lists.
  Supports globbing and regular expression to define parent-child relations.
- New functions 'in_linear_sequence' and 'is_linear_sequence' 
  check for gaps/duplicates in numerical or time series.
- New function in_range checks whether a variable is between bounds.
- New function 'part_whole_relation' facilitates checking aggregates
  against details, for data in 'long' format.
- New helper functions that for split-apply-combine on vectors, with the property
  that output is always of the same size as the input: 'sum_by', 'min_by', 'max_by'
  'mean_by' and the general 'do_by'.
- New function 'hb' implementing Hiridoglou-Berthelot outlier measure.
- New convenience function 'field_length' checks number (or range) of code
  points.
- New convenience function 'number_format' with simple syntax for
  specifying layout of numbers that are stored as character.
- New functions to check (non)existens of a given set of key combinations:
  'contains_exactly', 'contains_at_least', 'contains_at_most', 'does_not_contain'.
  Support for globbing and regular expression is built in, and tests can be
  performed group-wise.