@@ -1,5 +1,7 @@
 version 1.0.2
 - Improved 'print' method of all objects inheriting from 'confrontation' (#129)
+- 'compare' now also works with 'tibble' objects -- who disguise themselves
+  as data frames but behave differently.
 - Fix: add_indicators() would fail or not add results properly in some
   cases. (Thanks to Jos de Waard for reporting #128).
 
